# space-simulation

./: CMakeLists.txt  conanfile.txt  readme.md
include/space-simulation/: camera.h  default-res.h  mesh.h  register.h  renderer.h  shader.h  simulation.h
src/: camera.cpp  default-res.cpp  main.cpp  mesh.cpp  register.cpp  renderer.cpp  shader.cpp  simulation.cpp
wind/: CMakeLists.txt
wind/utils/include/utils/: math.h
wind/window/: CMakeLists.txt
wind/window/include/window/: window.h
wind/window/include/window/events/: mouse.h
wind/window/src/: window.cpp
wind/window/src/events/: mouse.cpp
